syntax = "proto3";

package pcsbasedoptimization;

option java_package = "ai.libs.hasco.pcsbasedoptimization.proto";
option java_multiple_files = true;
option java_generic_services = true;

service PCSBasedOptimizerService {
	rpc Evaluate(PCSBasedComponentProto) returns (PCSBasedEvaluationResponseProto) {}
}

message PCSBasedComponentProto {
  string name = 1;
  repeated PCSBasedParameterProto parameters = 2;
}

message PCSBasedParameterProto {
  string key = 1;
  string value = 2;
}

message PCSBasedEvaluationResponseProto {
	double result = 1;
}